# robot-joy2

./: .gitignore  GAZEBO_SIMULATION_FIXED.md  GAZEBO_SIMULATION_STATUS.md  HOW_TO_TEST_MOVEMENT.md  MOVEMENT_TEST_STATUS.md  README.md  RVIZ_WHEEL_FIX.md  test_robot_movement.sh
.kilocode/: mcp.json
doc/: mecanum_refactor_summary.md  plan_mecanum_refactor.md  workspace_refactoring_summary.md
src/joy2/: README.md  package.xml  setup.cfg  setup.py  test_complete_teleop_config.py  test_deadzone_implementation.py  test_modifier_control_system.py  test_motor_stop_functionality.py  test_return_to_center.py  test_servo_config.py  test_smooth_deadzone.py  test_teleop_servo_integration.py  test_wheel_control.py  test_wheel_return_to_center.py
src/joy2/config/: buzzer_config.yaml  camera_config.yaml  diff_controller.yaml  mecanum_controller.yaml  servo_config.yaml  teleop_config.yaml
src/joy2/description/urdf/: joy2.urdf.xacro
src/joy2/doc/: CHANGELOG.md  README_IMU.md  imu_integration.md  plan_camera_streaming.md  robot_visualization.md  video_streaming_implementation.md
src/joy2/joy2/: test_talker.py
src/joy2/joy2/config/: servo_config_loader.py  teleop_config_loader.py
src/joy2/joy2/control/: mecanum_controller.py
src/joy2/joy2/hardware/: pca9685.py  servo.py  shtp.py
src/joy2/joy2/nodes/: buzzer_node.py  camera_node.py  imu_node.py  joy2_teleop.py  mecanum_node.py  servo_node.py  webrtc_node.py
src/joy2/launch/: buzzer_node.launch.py  complete_system.launch.py  imu_node.launch.py  joy_node.launch.py  robot_visualization.launch.py  servo_node.launch.py
src/joy2_bringup/: CMakeLists.txt  package.xml
src/joy2_bringup/config/: README.md
src/joy2_bringup/launch/: complete_system.launch.py  diff_controller.launch.py  gazebo_simulation.launch.py  mecanum_controller.launch.py  simple_gazebo.launch.py
src/joy2_bringup/resource/: joy2_bringup
src/joy2_bringup/worlds/: empty_world.sdf
src/joy2_control/: package.xml  setup.py
src/joy2_control/config/: diff_controller.yaml  imu_config.yaml  mecanum_config.yaml  mecanum_controller.yaml  servo_config.yaml
src/joy2_control/joy2_control/: test_listener.py
src/joy2_control/joy2_control/config/: imu_config_loader.py
src/joy2_control/joy2_control/hardware/: bno080.py  buzzer.py  motor.py
src/joy2_control/joy2_control/nodes/: buzzer_node.py  imu_node.py  joy2_teleop.py  mecanum_node.py  servo_node.py  webrtc_node.py
src/joy2_control/launch/: buzzer_node.launch.py  imu_node.launch.py  joy_node.launch.py  servo_node.launch.py
src/joy2_control/resource/: joy2_control
src/joy2_description/: CMakeLists.txt  package.xml
src/joy2_description/launch/: robot_visualization.launch.py
src/joy2_description/resource/: joy2_description
src/joy2_description/rviz/: robot_view.rviz
src/joy2_description/urdf/: joy2.urdf.xacro  wheels_diff.xacro  wheels_mecanum.xacro
src/joy2_interfaces/: CMakeLists.txt  package.xml
src/joy2_interfaces/msg/: BuzzerCommand.msg  ServoCommand.msg
