<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joy2</name>
  <version>1.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yoann.hervieux@gmail.com">yoann</maintainer>
  <license>Apache-2.0</license>

  <depend>python3-smbus2</depend>
  <depend>python3-opencv</depend>
  <depend>python3-aiortc</depend>
  <depend>python3-aiohttp</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy2_interfaces</exec_depend>

  <!-- Camera dependencies -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
