<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joy2_bringup</name>
  <version>1.2.0</version>
  <description>Launch files for bringing up the complete Joy2 robot system</description>
  <maintainer email="yoann.hervieux@gmail.com">yoann</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joy2_description</depend>
  <depend>joy2_control</depend>
  <depend>joy2_interfaces</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>